--- a/WebApp/src/app/features/party/dealerlist/dealerlist.component.html
+++ b/WebApp/src/app/features/party/dealerlist/dealerlist.component.html
@@ -1,7 +1,7 @@
 <div class="grid">
     <div class="col-12">
         <div class="card">
-            <h4>Dealer Information</h4>
+            <h4>Dealer Assign List</h4>
 
             <!--selectionMode="single"-->
 
